# sqlrestore

./: CMakeLists.txt  Changelog  README.md  Toolchain-mingw32-shared.cmake  Toolchain-mingw32-static.cmake  sqlrestore.pro
.circleci/: config.yml
.github/workflows/: build.yml  ccpp.yml
cmake/: FindQuaZip.cmake  FindSingleApplication.cmake  FindSingleCoreApplication.cmake  Rpm.cmake  Toolchain-mingw32-static.cmake  Version.cmake
data/: data.qrc  icons.qrc  magic
debian/: changelog.in  control  copyright  rules
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  application.cpp  application.h  backupbackend.cpp  backupbackend.h  backupresult.h  bakfilebackend.cpp  bakfilebackend.h  bakfilecontainer.ui  bakfilefilter.cpp  bakfilefilter.h  bakfileheader.cpp  bakfileheader.h  bakfileitem.cpp  bakfileitem.h  bakfilemodel.cpp  bakfilemodel.h  bakfileview.cpp  bakfileview.h  bakfileviewcontainer.cpp  bakfileviewcontainer.h  bakfileviewcontainer.ui  commandlineoptions.cpp  commandlineoptions.h  config.h.in  dbconnector.cpp  dbconnector.h  iconloader.cpp  iconloader.h  logging.cpp  logging.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  metatypes.cpp  (+16 more)
